assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Sintony:wght@400;700&display=swap');

:root {
    --primary-color: #702E3E;
    --secondary-color: #E8E5E0;
    --white-color: #FFFFFF;
    --80-secondary-color: #E8E5E0CC;
}

body {
    font-family: 'Sintony', sans-serif;
    font-weight: 400;
    color: var(--white-color);
    background-color: var(--primary-color);
}



/* navbar */

.navbar {
    padding: 0;
}

.navbar-toggler {
    color: #fff;
    background-color: var(--primary-color);
    width: 38.88px;
    height: 38.88px;
    padding: 0;
    margin-right: 8px;
    border: 0;
}

.navbar-toggler-icon {
    background-image: url('../imgs/burger.svg');
    background-size: cover;
    width: 21px;
    height: 13.78px;
}

.navbar-nav .nav-link.active {
    color: var(--primary-color);
}

.nav-link {
    font-size: 0.938rem;
    color: inherit;
}

.nav-link:hover {
    color: inherit;
    opacity: 0.65;
}

.navbar-nav {
    color: var(--white-color);
}

.navbar-brand {
    padding: 0;
    width: 74px;
    margin-left: 8px;

}

.navbar-brand img {
    width: 74px;
}

.text-bg-custom {
    background-color: var(--primary-color);
}

.offcanvas {
    transition: ease-in-out;
    min-width: 100%;
}

.offcanvas-header {
    padding-top: 0;
    padding-left: 12px;
    padding-right: 30px;
}

.offcanvas-body {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.offcanvas-menu {
    color: #fff;
}

.offcanvas-menu p {
    border-bottom: 1px solid #fff;
    padding-bottom: 8px;
    margin-bottom: 50px;
}

.offcanvas-menu li:nth-child(even) {
    margin: 12px 0;
}

/* header */


.home-header {
    margin-top: 0px;
    background-image: url('../imgs/header.png');
    background-blend-mode: darken;
    background-origin: border-box;
    background-size: cover;
    background-repeat: no-repeat;
    min-height: 530px;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: center;
}


.header-info {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 76.79px;
}

.header-info p {
    width: 25ch;
    margin: 0 auto;
    text-align: center;
    font-size: 15px;
    line-height: 160%;
}

.header-btn {
    background-color: var(--secondary-color);
    color: var(--primary-color);
    width: 149.44px;
    padding: 12px 26.44px 12.85px 28px;
    border-radius: 25px;
    border-color: var(--secondary-color);
    border-style: none;
    font-size: 12px;
    margin-top: 24px;
}

.header-btn:hover {
    background-color: #702E3ECC;
    color: var(--white-color);
}

/* first-section */

.section-info {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 155px;
}

.section-info p {
    text-align: center;
    margin: 0 auto;
    width: 23ch;
}

/* buttons section */

.section-btns {
    background-image: url('../imgs/btns-section.png');
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    min-height: 566px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 37px;
    font-size: 10px;
}



.cta-btn {
    max-width: 139px;
    max-height: 159.58px;
    padding: 0;
    background-color: var(--primary-color);
    color: var(--secondary-color);
    border: 0;
    border-radius: 31px;

}

.cta-btn-active {
    background-color: var(--80-secondary-color);
    color: var(--primary-color);
}

.cta-btn img {
    margin: 18.54px 18.62px 0 18.34px;
}

.cta-btn p {
    margin: 11.53px auto 13.98px;
}

.principal {
    margin-top: 93px;
}

/* services section */

.section-services {
    background-color: var(--secondary-color);
    color: var(--primary-color);
    min-height: 229px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.section-services p {
    margin: 41px auto 30px;
    width: 28ch;
    text-align: center;
    font-size: 15px;
}

.section-services button {
    border: 0;
    background-color: var(--primary-color);
    color: var(--white-color);
    padding: 12px 47.44px 12.85px 49px;
    border-radius: 25px;
    font-size: 12px;

}

.section-services button:hover {
    background-color: #8B5663;
}

/* footer */

footer {
    min-height: 478px;
    /* display: flex; */
    /* flex-direction: column;
    align-items: center; */

    font-size: 12px;
}

.footer-info {
    margin-top: 35px;
}

footer h3 {
    font-size: 12px;
    margin: 0 auto 14px;
}

footer p {
    text-align: center;
    margin: 0 auto;
    width: 35ch;
    letter-spacing: 0.12px;
}

footer a {
    color: inherit;
    text-decoration: none;
}


.footer-contact {
    margin: 30px auto 20px;
}

.footer-contact p {
    margin-bottom: 14px;
}

.footer-contact a{
    text-decoration: underline;
}



.copyright hr {
    color: var(--white-color);
    width: 291px;
    margin: 0 0 20px;
}

.copyright p {
    font-size: 9px;
    margin: 0 auto 33px;
    width: 40ch;

    letter-spacing: 0.09px;
}


.whatsapp {
    position: fixed;
    right: 15px;
    bottom: 18px;
}



@media only screen and (min-width: 992px) {

    
    .text-lg-bold {
        font-weight: 700;
    }

    .navbar-brand {
        width: 139.45px;
        margin-left: 0;
    }

    .navbar>.container-fluid {
        justify-content: center;
        position:relative;
        padding-top: 25px;
        padding-bottom: 23px;
    }

    .navbar-brand {
        position: absolute;
        left: 57px;
        top: 0;
    }



    .navbar-brand img {
        width: 139.45px;
    }

    .navbar-nav .nav-item:nth-child(even){
        margin: 0 42px;
    }

    .offcanvas-menu li:nth-child(even) {
        margin: 0;
    }

    .home-header {
        background-image: url('../imgs/header-lg.png');
        min-height: 790px;
        gap: 50px;
    }

    img[alt="icono de granos de cafe"] {
        border-bottom: solid 2px var(--white-color);
        padding-bottom: 14.6px;
    }

    .header-info {
        margin-bottom: 211px;
        gap: 40px;
    }

    .header-info p {
        margin: 0 auto;
        width: 30ch;
        font-size: 29px;
        line-height: 46.4px;
    }

    .header-btn {
        font-size: 16px;
        padding: 12px 30px;
        width: 186px;
        margin-top: 0;
    }

    .section-info {
        min-height: 210px;
        font-size: 30px;
    }

    .section-info p {
        margin: 0 auto;
        width: 25ch;
        line-height: 48px;
        padding-bottom: 2px;
    }

    .section-btns {
        background-image: url('../imgs/btns-section-lg.png');
        flex-direction: row;
        justify-content: center;
        min-height: 790px;
        gap: 212px;
    }

    .cta-btn {
        max-width: 329px;
        max-height: 378px;
        border-radius: 61px;
    }

    .cta-btn img {
        width: 242px;
        height: 242px;
        margin: 43px 43px 0;
    }

    .cta-btn p {
        font-size: 20px;
        margin: 28.61px auto 38px;
        width: 25ch;
    }

    .cta-btn .arrow {
        width: 19.75px;
        height: 14.15px;
        margin: 0;
    }

    .principal {
        margin-top: 0;
    }

    .section-services {
        min-height: 343px;
    }

    .section-services p {
        font-size: 29px;
        margin: 55px auto 41px;
        width: 40ch;
        line-height: 46.4px;
    }

    .icon-services {
        width: 75.5px;
        height: 75.5px;
        margin-top: 65px;
    }

    .icon-services img {
        width: 32px;
        height: 45px;
    }

    .section-services button {
        font-size: 16px;
        padding: 12px 58px;
        
    }

    .section-services span {
        font-weight: 700;
    }

    footer {
        flex-direction: row;
        align-items: flex-start;
        flex-wrap: wrap;
        font-size: 14px;
        max-height: 485px;
    }

    .logo-footer {
        width: 139.45px;
        margin-left: 57px;
    }

    .footer-info {
        margin-top: 96px;
        text-align: start;
    }

    footer h3 {
        font-size: 16px;
        margin: 0 0 17px;
        width: 37ch;
    }

    .footer-info p {
        text-align: start;
        margin: 0;
        width: 43ch;
    }

    .footer-contact {
        margin-top: 96px;
        margin-left: 0;
        margin-right: 0;
        align-items: flex-start;
    }

    .footer-contact h3 {
        text-align: start;
        margin-bottom: 17px;
    }


    .footer-contact p {
        margin: 0;
        text-align: start;
        margin-bottom: 16px;
        width: 20ch;
    }

    p.address {
        width: 31ch;
    }

    .footer-contact a {
        display: block;
        margin-right: auto;
        
    }

    .footer-menu {
        margin-top: 96px;
        margin-left: 60px;
        width: 20ch;
    }

    .footer-menu a {
        margin-bottom: 20px;
    }

    .copyright {
        margin-top: 68px;
    }

    .copyright hr {
        width: 94%;
    }

    .copyright p {
        width: fit-content;
        font-size: 12px;
    }

    .whatsapp {
        bottom: 47.19px;
        right: 36px;
        width: 70px;
        height: 70px;
    }

    .whatsapp img {
        width: 70px;
        height: 70px;
    }

}

